<resources>
    <string name="app_name">BoxMadik</string>
    <string name="action_settings">Settings</string>
    <string name="cerrar_sesion">Cerar Sesión</string>
    <string name="create_account">Crear Cuenta</string>
    <string name="forgot">¿Olvidaste tu contraseña?</string>
    <string name="pass_confirmation">Confirmar Password</string>
    <string name="phone">Cell</string>
    <string name="search">Buscar propuesta...</string>
    <string name="search_especiality">Buscar cotizacion...</string>
    <string name="error_autentication">Usuario o contraseña incorrecta</string>
    <string name="informacion_finalizar">Finalizar</string>
    <string name="informacion_especialista">Información Especialista</string>
    <string name="informacion_cursos_estudios">Cursos Estudiados</string>
    <string name="informacion_monto_contable">Monto Contable S./</string>
    <string name="informacion_monto_disponible">Monto Disponible S./</string>
    <string name="informacion_monto_total">Monto Total S./</string>
    <string name="detalle_movimiento">DETALLE \"MONTO CONTABLE\"</string>
</resources>