<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutDireccion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_edittext"
            app:layout_constraintEnd_toStartOf="@+id/floatingActionButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextViewDireccion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:completionThreshold="1"
                android:drawableLeft="@drawable/ic_mode_edit_black_24dp"
                android:drawablePadding="20dp"
                android:hint="@string/informacion_monto_contable"
                android:inputType="numberDecimal"
                android:maxLines="3"
                android:paddingBottom="12dp"
                android:paddingLeft="8dp"
                android:paddingRight="12dp"
                android:paddingTop="12dp"
                android:textColor="@color/md_black_1000"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageViewClose"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


            </AutoCompleteTextView>

            <ImageView
                android:id="@+id/imageViewClose"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:src="@drawable/ic_dialog_close_light"
                app:layout_constraintBottom_toBottomOf="@+id/autoCompleteTextViewDireccion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/autoCompleteTextViewDireccion" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/ic_search_black_24dp"
            android:visibility="visible"
            app:fab_size="mini"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayoutDireccion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/constraintLayoutDireccion" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutDisponible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_edittext"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayoutDireccion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayoutDireccion">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextViewDisponible"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:completionThreshold="1"
                android:drawableLeft="@drawable/ic_mode_edit_black_24dp"
                android:drawablePadding="20dp"
                android:hint="@string/informacion_monto_disponible"
                android:inputType="numberDecimal"
                android:maxLines="3"
                android:paddingBottom="12dp"
                android:paddingLeft="8dp"
                android:paddingRight="12dp"
                android:paddingTop="12dp"
                android:textColor="@color/md_black_1000"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageViewCloseDisponible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


            </AutoCompleteTextView>

            <ImageView
                android:id="@+id/imageViewCloseDisponible"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:src="@drawable/ic_dialog_close_light"
                app:layout_constraintBottom_toBottomOf="@+id/autoCompleteTextViewDisponible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/autoCompleteTextViewDisponible" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButtonDisponible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/ic_search_black_24dp"
            android:visibility="visible"
            app:fab_size="mini"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayoutDisponible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/constraintLayoutDisponible" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutTotal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_edittext"
            app:layout_constraintEnd_toStartOf="@+id/floatingActionButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayoutDisponible">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextViewTotal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:completionThreshold="1"
                android:drawableLeft="@drawable/ic_mode_edit_black_24dp"
                android:drawablePadding="20dp"
                android:hint="@string/informacion_monto_total"
                android:inputType="numberDecimal"
                android:maxLines="3"
                android:paddingBottom="12dp"
                android:paddingLeft="8dp"
                android:paddingRight="12dp"
                android:paddingTop="12dp"
                android:textColor="@color/md_black_1000"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageViewCloseTotal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


            </AutoCompleteTextView>

            <ImageView
                android:id="@+id/imageViewCloseTotal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:src="@drawable/ic_dialog_close_light"
                app:layout_constraintBottom_toBottomOf="@+id/autoCompleteTextViewTotal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/autoCompleteTextViewTotal" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <View
            android:id="@+id/view7"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="24dp"
            android:background="@color/md_black_1000"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayoutTotal"
            app:layout_constraintStart_toStartOf="@+id/constraintLayoutTotal"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayoutTotal" />


        <TextView
            android:id="@+id/textViewMontoContable"
            style="@style/TextAppearance.AppCompat.SearchResult.Title"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_margin="@dimen/fab_margin"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/border_cardview"
            android:gravity="center"
            android:text="@string/detalle_movimiento"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view7" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
