<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/fondo_color">

    <ImageView
        android:id="@+id/imageViewEmpresa"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_yape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/carViewCabecera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        app:cardCornerRadius="@dimen/fab_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewEmpresa">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/imageViewRubro"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_informatica"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewNombreOficio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:maxLines="3"
                android:text="@string/informacion_cursos_estudios"
                android:textAppearance="@style/TextAppearance.Compat.Notification.Title"
                android:textColor="@color/md_black_1000"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewRubro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewRubro"
                app:layout_constraintTop_toTopOf="@+id/imageViewRubro" />


        </androidx.constraintlayout.widget.ConstraintLayout>





    </androidx.cardview.widget.CardView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/ic_border_round"
        app:layout_constraintEnd_toEndOf="@+id/carViewCabecera"
        app:layout_constraintStart_toStartOf="@+id/carViewCabecera"
        app:layout_constraintTop_toBottomOf="@+id/carViewCabecera">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:inputType="textCapSentences|textMultiLine"
            android:isScrollContainer="true"
            android:maxLength="2000"
            android:maxLines="4"
            android:minHeight="100dp"
            android:singleLine="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                android:hint="Descripcion"
                android:minHeight="100dp"
                android:textColor="@color/md_grey_900" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewInformacionEspecialista"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="@dimen/fab_margin"
        app:layout_constraintEnd_toEndOf="@+id/carViewCabecera"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/carViewCabecera"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout8">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/textView23"
                style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:background="@color/md_lime_200"
                android:gravity="center"
                android:text="@string/informacion_especialista"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgProfile"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_file_upload_black_24dp"
                app:civ_border_color="#d7d7d7"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView23"
                tools:ignore="MissingConstraints" />


            <TextView
                android:id="@+id/textViewNombreEspecialista"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/mr_chooser_title"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imgProfile"
                app:layout_constraintTop_toTopOf="@+id/imgProfile" />


            <TextView
                android:id="@+id/textViewTelefonoEspecialista"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/mr_chooser_title"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imgProfile"
                app:layout_constraintTop_toBottomOf="@+id/textViewNombreEspecialista" />

            <TextView
                android:id="@+id/textViewEmailEspecialista"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/mr_chooser_title"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imgProfile"
                app:layout_constraintTop_toBottomOf="@+id/textViewTelefonoEspecialista" />


            <TextView
                android:id="@+id/textViewFechaInicioEspec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/mr_chooser_title"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imgProfile"
                app:layout_constraintTop_toBottomOf="@+id/textViewEmailEspecialista" />


            <TextView
                android:id="@+id/textViewFechaFinalEspec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/mr_chooser_title"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/textViewFechaInicioEspec"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintPagar"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/btn_bg"
        android:text="@string/informacion_finalizar"
        android:textColor="#ffffff"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Confirmar Pago"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textViewPagar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />




    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>